Add Google Fonts and update styles for better typography

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>InvisiMug | Buy Now!</title>
+  <!-- Google Fonts: Rubik & Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Rubik:700,900&family=Lato:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
